--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
 
   "dependencies": {
 
+    "@emotion/react": "^11.11.4",
+
+    "@emotion/styled": "^11.11.0",
+
     "@mantine/core": "7.6.1",
 
     "@mantine/form": "^7.6.1",
@@ -59,6 +63,10 @@
     "react-dom": "18.2.0",
 
     "react-google-recaptcha": "^3.1.0",
+
+    "react-markdown": "^9.0.1",
+
+    "react-syntax-highlighter": "^15.5.0",
 
     "styled-components": "^6.1.8"
 
