--- a/package.json
+++ b/package.json
@@ -104,6 +104,8 @@
 
     "@types/react": "18.2.35",
 
+    "@types/react-google-recaptcha": "^2.1.9",
+
     "@typescript-eslint/eslint-plugin": "^6.9.1",
 
     "@typescript-eslint/parser": "^6.9.1",
