--- a/package.json
+++ b/package.json
@@ -106,6 +106,8 @@
 
     "@types/react-google-recaptcha": "^2.1.9",
 
+    "@types/react-syntax-highlighter": "^15.5.11",
+
     "@typescript-eslint/eslint-plugin": "^6.9.1",
 
     "@typescript-eslint/parser": "^6.9.1",
